# wChat

./: .editorconfig  .gitignore  CLAUDE.md  PropertySheet.props  README.md  wChat_LabReport.docx  wChat_LabReport.txt  wChat_auto_open.bat  wChat_auto_start.bat
.claude/: settings.json  settings.local.json
docs/: Client_UI_Requirements.md  FileServer_Design.md  Qt_Socket_Threading_Bug_Summary.txt
wChat_AgentServer/: .env.example  .gitignore  README.md  pyproject.toml
wChat_AgentServer/app/: __init__.py  main.py  redis_client.py
wChat_AgentServer/app/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
wChat_AgentServer/app/api/: deps.py  health.py  presets.py  suggest.py  suggest_stream.py
wChat_AgentServer/app/config/: settings.py
wChat_AgentServer/app/llm/: __init__.py  base.py  deepseek.py  streaming.py
wChat_AgentServer/app/memory/: __init__.py  base.py  in_memory.py  redis_store.py
wChat_AgentServer/app/presets/: __init__.py  loader.py  models.py
wChat_AgentServer/app/rpc/: README.md  agent_data_client.py
wChat_AgentServer/app/schemas/: __init__.py  chat.py  request.py  response.py
wChat_AgentServer/app/security/: auth.py  rate_limit.py
wChat_AgentServer/app/tools/: __init__.py  base.py  chat_context.py  mock_backend.py  search.py
wChat_AgentServer/config/: agent.ini.example  presets.yaml
wChat_AgentServer/tests/: conftest.py  test_agent_flow.py  test_api.py  test_auth.py  test_grpc_client.py  test_memory_redis.py  test_presets.py  test_rate_limit.py  test_tools.py
wChat_AgentServer/tests/fixtures/: sample_chats.json
(+274 files in other folders)
